Update CS167-Lab1-README.md